--- a/Resume-commercial.Rmd
+++ b/Resume-commercial.Rmd
@@ -30,10 +30,18 @@ linkcolor: blue
 urlcolor: blue
 ---
 # Objetivo
-Desarrollar una carrera a largo plazo en la dirección de expansión de empresas digitales. Integrar grandes desarrollos de tecnología en R y Python para analíticos de negocio en reportes y aplicaciones. 8 años de experiencia como especialista de Ecommerce y estratega digital. 
+Desarrollar empresas digitales. 8 años como especialista de Ecommerce y estratega digital. 
 
 
-# Empleos
+# Experiencia
+
+__Border Grower__ ,       *Director de ecommerce*. \hfill 2020
+
+Consultor de ecommerce y estratega digital.
+
+__La Bodega Solar__ ,       *Director de expansión.* \hfill 2019
+
+Coordinador de desarrollo de negocios en ecommerce y tecnología.
 
 __Digital Lab Agency__,     *Consultor de ecommerce.* \hfill 2018
 
@@ -55,20 +63,18 @@ __Maestría en Economía Aplicada__ El Colegio de la Frontera Norte, Tijuana, BC
 
 
 __Licenciatura en Negocios Internacionales__ San Diego State University. San Diego, CA. \hfill 2013
- 
+UABC, Tijuana, México. 2012 \hfill UV, Viña del Mar, Chile. 2011
+  
 # Habilidades
 
 ## Digitales
 
-  - Programador en R y Python para ciencia de datos.
-  - Desarrollador web tienda en línea y shopify expert.
-  - Avanzado en paquetería Ms-Office, G-Suite, Dropbox, Todoist, Trello, Slack.
-  - Busqueda en internet para SEO, redes sociales, administración de dominios.
-  - Experiencia con Google Classroom y Blackboard
+  - Programador en R y Python para ciencia de datos y de tienda en línea como shopify expert.
+  - Avanzado en paquetería Ms-Office, G-Suite, Dropbox, Todoist, Trello, Slack
+  - SEO, redes sociales, administración de dominios, correos, hospedajes y aplicaciones
 
 ## Nobles
-  - Bilingue Inglés y Español. Francés en proceso.
-  - Comunicación transcultural probada en 16 países.
+  - Bilingue Inglés y Español. Comunicación transcultural en 16 países.
   - Negociación y manejo de información sensible. 
 
 # Referencias
